- 0.0.1 - SNAPSHOT

gradle script
source packages
sprint boot
h2 database
integrate test
Customer: domain, repository, service, controller, view(thymeleaf)
log standard: slf4j, logback
profile: prod, dev
Thymeleaf i18n
write unittest for customer service crud
optimize with css, icons
add search methods with @Query
pagination like jd
add mysql for prod profile

rest api design
product and order