@@ -18,3 +18,5 @@ hs_err_pid*
 .gradle/
 bin/
 logs/
+build/
+src/main/generated/
