@@ -9,3 +9,5 @@ spring.profiles.active=dev
 # i18n for Thymeleaf messages
 spring.messages.basename=i18n/messages
 
+# map root context
+#server.contextPath=/api/*
